cmake_minimum_required(VERSION 3.0.0)
project(search_lib)

set(CMAKE_CXX_STANDARD 17)
set(SEARCH_LIB_LIBRARIES)
set(SEARCH_LIB_INCLUDE_DIRS)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(SEARCH_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(SEARCH_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)